# aoc-2021-rs

./: Cargo.toml
.cargo/: config
src/: error.rs  main.rs  prelude.rs
src/days/: mod.rs
src/days/day02_dive/: coordinate.rs  direction.rs  mod.rs  movement.rs  submarine.rs
src/util/: inputs.rs  mod.rs
